service class created, actuator added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8000
+spring.data.mongodb.uri=mongodb://gfasil:1994@cluster0-shard-00-00-qexaa.mongodb.net:27017,cluster0-shard-00-01-qexaa.mongodb.net:27017,cluster0-shard-00-02-qexaa.mongodb.net:27017/user_blog?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin&retryWrites=true&w=majority
 
+management.endpoints.web.exposure.include=*
+management.endpoint.loggers.enabled=true
+management.endpoint.restart.enabled=true
+management.endpoint.refresh.enabled=true
+management.endpoint.health.enabled=true
+management.security.enabled=false
+management.health.db.enabled=true
+management.health.diskspace.enabled=true
