--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
 
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
@@ -46,7 +50,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-
+            <version>2.6</version>
         </dependency>
         <dependency>
             <groupId>com.graphql-java</groupId>
@@ -63,6 +67,7 @@
             <artifactId>graphiql-spring-boot-starter</artifactId>
             <version>3.6.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
