--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8000
-spring.data.mongodb.uri=mongodb://gfasil:1994@cluster0-shard-00-00-qexaa.mongodb.net:27017,cluster0-shard-00-01-qexaa.mongodb.net:27017,cluster0-shard-00-02-qexaa.mongodb.net:27017/user_blog?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin&retryWrites=true&w=majority
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=user_blog
 
 management.endpoints.web.exposure.include=*
 management.endpoint.loggers.enabled=true
